final version of intial analysis

--- a/Initial_Analysis.ipynb
+++ b/Initial_Analysis.ipynb
@@ -25,6 +25,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initial Idea\n",
+    "Here we have the initial idea where we extracted quotes that contained words related to China. Our idea with this was that, if the title contained any word related to China, the quotes in the article may be abute China as well. As for the keywords list, we had a brainstorm on the possible keywords about China and found their equivalent ones using Wikidata."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -35,21 +43,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Initial idea\n",
-    "Here we have the initial idea where we extracted quotes that contained words related to China. Our idea with this was that, if the title contained any word related to China, the quotes in the article may be abut China aswell"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data which contained a China related word in the title\n",
-    "path_to_out = 'C:/Users/jozef/Desktop/quotebank/quotebank-2020-contains-related.json.bz2'\n",
+    "path_to_out = 'data/quotebank-2020-contains-related.json.bz2'\n",
     "df = pd.read_json(path_to_out ,lines=True)"
    ]
   },
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we look at the titles, to see if they make sense"
+    "Here we look at the titles, to see if they make sense."
    ]
   },
   {
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above we see that the 3rd title is much too long, and is probably due to a data collection issue on the side of quotebank. Sice we would like to extract meaningful information from the title later on, we decided to remove articles with long titles from the dataset."
+    "Above we see that the third title is much too long, and is probably due to a data collection issue on the side of quotebank. Sice we would like to extract meaningful information from the title later on, we decided to remove articles with long titles from the dataset."
    ]
   },
   {
@@ -166,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see that 90% of the samples have a length of below 115, we therefore choose to remove articles that have a length of above 200. We chose 200 since this statistic is only computed on the 2020 dataset, and we thus take 200 as an upper bound since the other years may be different"
+    "Here we see that 90% of the samples have a length of below 115, we therefore choose to remove articles that have a length of above 200. Since this statistic is only computed on the 2020 dataset, and we thus take 200 as an upper bound since the other years may be different."
    ]
   },
   {
@@ -773,7 +773,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we see, the context seems to not contain any of the words, however, when we look closer, the link contains the word ccp inside the link itself. **We therefore will remove ccp and prc from the word list in our final data extraction since they can contaminate our dataset with onrelated quotes.**"
+    "As we see, the context seems to not contain any of the words, however, when we look closer, the link contains the word ccp inside the link itself. We therefore will remove ccp and prc from the word list in our final data extraction since they can contaminate our dataset with unrelated quotes."
    ]
   },
   {
@@ -820,7 +820,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As plot shows, there are quotations that that too long while most of the quoations have a length less than 500."
+    "As the plot shows, there are quotations that are too long while most of the quoations have a length less than 500."
    ]
   },
   {
@@ -998,7 +998,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see above, there are many speakers with multiple QIDs, which may be the case if they have very commom names. "
+    "As we can see above, there are many speakers with multiple QIDs, which may be the case if they have very commom names. We decide to drop those rows since we can not tell who they actually are so that we can not draw any solid conclusion from it."
    ]
   },
   {
@@ -1483,7 +1483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we see above, we obtain much more possible information about the speaker of the quotation. Next we want to filter all the speakers that are not from a western country. For this filtering we have created our own dataframe which we use to define the QIDS of western countries. We also need to drop any rows who have an unspecified nationality. For the persons with multiple nationalities we check if any of them are in a western country"
+    "As we see above, we obtain much more possible information about the speaker of the quotation. Next we want to filter all the speakers that are not from a western country. For this filtering we have created our own dataframe which we use to define the QIDS of western countries. We also need to drop any rows who have an unspecified nationality. For the persons with multiple nationalities we check if any of them are in a western country."
    ]
   },
   {
@@ -1910,7 +1910,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the list of western countries, we used the [political definition](https://sashamaps.net/docs/maps/list-of-western-countries/) . We then obtained the QIDS from wikidata manually. "
+    "For the list of western countries, we used the [political definition](https://sashamaps.net/docs/maps/list-of-western-countries/) . We then obtained the QIDs from wikidata manually. "
    ]
   },
   {
@@ -2008,7 +2008,7 @@
     "## Summary of Data Cleaning\n",
     "\n",
     "In this notebook we have observed the following points:\n",
-    "- We observed that some titles are too long, and as such we will remoove them in the data processing pipeline.\n",
+    "- We observed that some titles are too long, and as such we will remove them in the data processing pipeline.\n",
     "- We saw that we could not rely on the URL to extract the country of origin. \n",
     "- Next we saw that the title may not be representative of the topic of the quote so we decided to check the context and quote instead.\n",
     "- Finally, we observed that most of the western quotes are from people with a english speaking nationality."
@@ -2018,7 +2018,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis\n",
+    "# More on Exploratory Data Analysis\n",
     "\n",
     "After cleaning data, we can generally see how this dataset look like.\n",
     "\n",
@@ -2180,7 +2180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
