fix issue and update dataset

--- a/ML-Pipeline.ipynb
+++ b/ML-Pipeline.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# Data is the result of the data cleaning pipeline\n",
-    "path = 'C:/Users/jozef/Desktop/quotebank/western-quotes-2020.json.bz2'\n",
+    "path = 'data/western-quotes-2020.json.bz2'\n",
     "quote_df = pd.read_json(path ,lines=True)"
    ]
   },
@@ -1360,7 +1360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
