--- a/notebooks/Aggreggate_topic_sentiment.ipynb
+++ b/notebooks/Aggreggate_topic_sentiment.ipynb
@@ -21,6 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Add line bar to topic plot\n",
     "def add_topic(start, stop, name, fig, color):\n",
     "    fig.add_trace(go.Bar(\n",
     "    y=[name],\n",
@@ -1272,6 +1273,7 @@
     }
    ],
    "source": [
+    "# Generate topic occurence plot\n",
     "import plotly.graph_objects as go\n",
     "import plotly.express as px\n",
     "colors = px.colors.qualitative.G10 + px.colors.qualitative.Antique\n",
@@ -1319,35 +1321,6 @@
     "fig.update_xaxes(dtick=1)\n",
     "fig.show()\n",
     "fig.write_html(f\"C:/Users/jozef/Desktop/quotebank/topic_overview.html\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "e2b9394a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['quotationOffset', 'quoteID', 'numOccurrences', 'quotation',\n",
-       "       'leftContext', 'rightContext', 'globalTopSpeaker', 'globalProbas',\n",
-       "       'localTopSpeaker', 'localProbas', 'title', 'date', 'articleID',\n",
-       "       'localTopSpeakerID', 'aliases', 'date_of_birth', 'nationality',\n",
-       "       'gender', 'lastrevid', 'ethnic_group', 'US_congress_bio_ID',\n",
-       "       'occupation', 'party', 'academic_degree', 'id', 'label', 'candidacy',\n",
-       "       'type', 'religion', 'keywords', 'negative_sentiment',\n",
-       "       'neutral_sentiment', 'positive_sentiment', 'max_sentiment'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "quote_df.columns"
    ]
   },
   {
@@ -1403,7 +1376,9 @@
     }
    ],
    "source": [
+    "# Code to aggergate quotations and topics per year\n",
     "years = list(range(2008, 2021))\n",
+    "# Mapping from label number to string\n",
     "label_dict = {2008:{1: 'olympics', 2: 'dalai_lama'},\n",
     "             2009: {1:'climate', 2:'olympics', 3:'north_korea',\n",
     "                   4:'dalai_lama', 5:'human_rights'},\n",
@@ -1434,6 +1409,7 @@
     "             2020: {1: 'trade_relations', 2: 'covid-19', 3:'chinese_currency',\n",
     "                   4:'huawei'}}\n",
     "\n",
+    "# Label add others label to mapping\n",
     "for key in label_dict.keys():\n",
     "    label_dict[key][-1] = 'others'\n",
     "\n",
@@ -1444,6 +1420,8 @@
     "                          'hong_kong', 'huawei', 'economy',\n",
     "                          'covid-19', 'trade_relations', 'others', \n",
     "                          'average', 'quotation', 'speaker'])\n",
+    "\n",
+    "# For every year agregate sentiment scores per topic. \n",
     "for year in years:\n",
     "    print(year)\n",
     "    df_path = f'C:/Users/jozef/Desktop/quotebank/processed_western_quotes/processed_western_quotes_{year}.json.bz2'\n",
@@ -1456,12 +1434,16 @@
     "    temp_df = pd.DataFrame(columns = df.columns)\n",
     "    \n",
     "    sentiment_index = quote_df.positive_sentiment - quote_df.negative_sentiment\n",
+    "    \n",
+    "    # Save useful data for analysis\n",
     "    temp_df['kw_list'] = quote_df.keywords.apply(lambda x: [y[0] for y in x])\n",
     "    temp_df['average'] = sentiment_index\n",
     "    temp_df['others'] = sentiment_index\n",
     "    temp_df['quotation'] = quote_df.quotation\n",
     "    temp_df['speaker'] = quote_df.localTopSpeaker\n",
     "    temp_df['date'] = quote_df.date\n",
+    "    \n",
+    "    # Compute keyword intersections. One quote may regard multiple topics\n",
     "    for i, group in keyword_df.groupby('keyword_label'):\n",
     "        if i != -1:\n",
     "            kws = set(group.keyword)\n",
@@ -1471,7 +1453,8 @@
     "            temp_df[label][mask] = pd.NA\n",
     "            temp_df['others'][~mask] = pd.NA\n",
     "    temp_df['year'] = year\n",
-    "    df = pd.concat([df, temp_df])"
+    "    df = pd.concat([df, temp_df])\n",
+    "    "
    ]
   },
   {
@@ -1493,6 +1476,7 @@
    },
    "outputs": [],
    "source": [
+    "# Generate mean sentiment per year per topic\n",
     "sentiment_df = pd.DataFrame()\n",
     "for i, group in df.groupby('year'):\n",
     "    sentiment_df = pd.concat([sentiment_df, group.drop(['kw_list', 'quotation', 'date', 'speaker'], axis =1).mean()], axis =1)\n",
@@ -3292,6 +3276,7 @@
     }
    ],
    "source": [
+    "# Code to generate topic sentiment trends\n",
     "fig = go.Figure(layout_xaxis_range=[2007,2021])\n",
     "colors = px.colors.qualitative.G10 + px.colors.qualitative.Antique\n",
     "\n",
@@ -3336,13 +3321,14 @@
     }
    ],
    "source": [
+    "# Most quoted quotations related to trade in 2014\n",
     "df[(df.year == 2014) & ~(df.trade_relations.isna())].quotation.value_counts()[:5]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "b244589e",
+   "id": "a4407e1d",
    "metadata": {},
    "outputs": [
     {
@@ -3361,6 +3347,7 @@
     }
    ],
    "source": [
+    "# Gather data to show significance of Phase one trade agreement\n",
     "df_2020 = df[df.year == 2020]\n",
     "before_15 = df_2020[df_2020.date.apply(lambda x: x.timetuple().tm_yday < 15)]\n",
     "after_15 = df_2020[df_2020.date.apply(lambda x: x.timetuple().tm_yday >= 15)]\n"
@@ -3369,7 +3356,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7483f3fb",
+   "id": "98667456",
    "metadata": {},
    "outputs": [
     {
@@ -3390,7 +3377,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "d5e3f2e3",
+   "id": "c9785110",
    "metadata": {},
    "outputs": [
     {
@@ -3411,7 +3398,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "7cdbdcf1",
+   "id": "9eed1249",
    "metadata": {},
    "outputs": [
     {
@@ -3426,6 +3413,7 @@
     }
    ],
    "source": [
+    "# Test whether there is a significant difference in sentiment before and after jan 15th \n",
     "from scipy.stats import ttest_ind\n",
     "ttest_ind(before_15[before_15.trade_relations.notnull()].trade_relations, \n",
     "          after_15[after_15.trade_relations.notnull()].trade_relations)"
