--- a/notebooks/Extract_keyword_labels.ipynb
+++ b/notebooks/Extract_keyword_labels.ipynb
@@ -5,7 +5,9 @@
    "id": "ecaa07ac",
    "metadata": {},
    "source": [
-    "In this notebook we classify the extracted keywords into meaningful categories. We do this by labeling a small subset of keywords (top 50 occurring keywords per year) and bootstrapping a larger dataset."
+    "In this notebook we classify the extracted keywords into meaningful categories. We do this by labeling a small subset of keywords (top 50 occurring keywords per year) and bootstrapping a larger dataset.\n",
+    "\n",
+    "The idea behind it is that we have 5 keywords per quotation, we then hand label the top 50 keywords, and assume keywords in a list with a hand-labelled keyword belong to the same topic. We then label all keywords that occur only once in the dataset of one year as outliers if they do not appear with one of the top 50 keywords. We then train a RandomForestClassifier + PCA to predict the labels. Finally, we predict on all the keywords and take those as the topic labels."
    ]
   },
   {
@@ -60,18 +62,23 @@
     "        # If largest intersection not unique, exclude from training data and let classifier predict\n",
     "        elif (group_intersects > 0).sum() > 1:\n",
     "            labels[i] = 0\n",
-    "\n",
+    "            \n",
+    "    # Repeat labels 5 times (5 keywords per quotation)\n",
     "    labels = np.repeat(labels, 5)\n",
     "    \n",
+    "    # Keep unique keywords\n",
     "    _, index = np.unique(keywords, return_index=True)\n",
     "\n",
     "    labels = labels[index]\n",
     "    keywords = keywords[index]\n",
+    "    \n",
+    "    # Label unrelated keywords\n",
     "    print('Generating outlier labels')\n",
     "    for i, k in tqdm(enumerate(keywords), total = len(keywords)):\n",
     "        if counts[k] == 1 and labels[i] == 0:\n",
     "            labels[i] = -1    \n",
-    "\n",
+    "    \n",
+    "    # Disable spacy functionality\n",
     "    dis = ['ner', 'tagger', 'parser', 'entity_linker', 'entity_ruler',\n",
     "       'textcat', 'textcat_multilabel', 'lemmatizer', 'morphologizer',\n",
     "      'attribute_ruler', 'senter', 'sentencizer']\n",
@@ -80,18 +87,22 @@
     "    nlp = spacy.load('en_core_web_md')\n",
     "    spacy.prefer_gpu()\n",
     "    spacy.require_gpu()\n",
+    "    # Generate keyword embeddings\n",
     "    print('Generating word embeddings')\n",
     "    for i, doc in tqdm(enumerate(nlp.pipe(keywords, batch_size=600, disable=dis)), total = len(keywords)):\n",
     "        if type(doc.vector) != np.ndarray:\n",
     "            embeddings[i]=doc.vector.get()\n",
     "        else:\n",
     "            embeddings[i]=doc.vector\n",
-    "\n",
+    "    \n",
+    "    # Train on non-zero labels (0 labels are unknown)\n",
     "    X_train = embeddings[labels != 0]\n",
     "    y_train = labels[labels != 0]    \n",
     "    print('Training classifier')\n",
-    "    pipe = Pipeline([('pca', PCA(n_components = 50)), ('random forest', RandomForestClassifier(n_jobs = -1))])\n",
+    "    pipe = Pipeline([('pca', PCA(n_components = 50)), ('random forest', RandomForestClassifier(n_jobs = -1))])    \n",
     "    pipe.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Predict on all embeddings\n",
     "    preds = pipe.predict(embeddings)\n",
     "\n",
     "    return pd.DataFrame(np.column_stack((keywords, preds))\n",
