--- a/Topic_sentiment_RQ3_part_2.ipynb
+++ b/Topic_sentiment_RQ3_part_2.ipynb
@@ -15,6 +15,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ab218e9",
+   "metadata": {},
+   "source": [
+    "In this notebook we analyze the topic sentiments as they change over time "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "208e78d9",
